# ai-intern-assessment-syed

./: .gitignore  Chat1.md  README.md  notes.md
task1/: README.md  app.py  evaluate.py  ingest.py  questions.json  requirements.txt  results.json  retrieval.py
task1/chroma_db/028a705c-37c8-4c2a-93a4-2c5d6ce6e654/: index_metadata.pickle
task1/chroma_db/2dc1e309-19e6-49e5-8424-fe1bb1934d70/: index_metadata.pickle
task1/chroma_db/94122e17-19c7-4a64-a289-e63d9240d815/: index_metadata.pickle
task1/chroma_db/95c1c22c-f3f8-4b84-a824-7a8d6cc5b959/: index_metadata.pickle
task1/chroma_db/e469701f-abcc-46be-ab7a-89d0a4dc28ff/: index_metadata.pickle
task2/: agent.py  agent_state.py  agent_tools.py  app.py  decisions.md  fix_validator.py  pyproject.toml  readme.md
task2/guardrail_tests/: test_guardrails.py
task2/runs/: run_1_happy_path.json  run_2_invalid_input.json  run_3_vague_input.json
task2/task1/: README.md  app.py  decisions.md  evaluate.py  results.json  retrieval.py
task3/: README.md  github_client.py  server.py  test.py
task4/: LIMITATIONS.md  app.py  architecture.md  orchestrator.py  readme.md
