[project]
name = "task-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.2",
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "ddgs>=9.14.4",
    "groq>=1.4.0",
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.7.1",
    "langgraph>=1.2.2",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
]
